--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supa Store</title>
+    <title>Supa Store - Top Up Games</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -14,8 +14,8 @@
         <header class="header">
             <a href="index.html" class="logo-link">
                 <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="Supa Store Logo" class="logo">
+                <h1 class="website-name">Supa Store</h1>
             </a>
-            <h1 class="website-name">Supa Store</h1>
             <div class="header-right">
                 <a href="#" class="header-link">
                     <i class="fas fa-search"></i>
@@ -25,53 +25,28 @@
                 </a>
             </div>
         </header>
-    
+
         <main class="game-selection-main">
-            <section class="top-section">
-                <div class="carousel-container">
-                    <div class="carousel-slide"></div>
-                    <div class="carousel-dots"></div>
-                </div>
-            </section>
-    
+            <h2 class="section-title">Pilih Game Favoritmu</h2>
             <section class="game-list-section">
-                <h2 style="text-align: center;">Pilih Game</h2>
                 <div id="game-list" class="game-grid-custom">
                     </div>
             </section>
         </main>
     </div>
 
-    <footer class="site-footer">
-        <div class="footer-container">
-            <div class="footer-column">
-                <h4 class="footer-logo">Supa Store</h4>
-                <p>Platform terpercaya untuk top-up game dan voucher digital dengan harga terjangkau dan proses yang cepat.</p>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                </div>
-            </div>
-            <div class="footer-column">
-                <h4>Informasi</h4>
-                <ul>
-                    <li><a href="#">Tentang Kami</a></li>
-                    <li><a href="#">Syarat & Ketentuan</a></li>
-                    <li><a href="#">Kebijakan Privasi</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Bantuan</h4>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Hubungi Kami</a></li>
-                </ul>
-            </div>
+    <footer class="footer">
+        <div class="footer-socials">
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/supastoreid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Supa Store. All Rights Reserved.</p>
-        </div>
+        <ul class="footer-links">
+            <li><a href="#">Tentang Kami</a></li>
+            <li><a href="#">Kebijakan Privasi</a></li>
+            <li><a href="#">Syarat & Ketentuan</a></li>
+        </ul>
+        <p>&copy; 2024 Supa Store. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
