--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supa Store - Top Up Games</title>
+    <title>WALZSHOP - Top Up Games</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -13,8 +13,8 @@
     <div class="main-container">
         <header class="header">
             <a href="index.html" class="logo-link">
-                <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="Supa Store Logo" class="logo">
-                <h1 class="website-name">Supa Store</h1>
+                <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="WALZSHOP Logo" class="logo">
+                <h1 class="website-name">WALZSHOP</h1>
             </a>
             <div class="header-right">
                 <a href="#" class="header-link">
@@ -39,14 +39,14 @@
         <div class="footer-socials">
             <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://t.me/supastoreid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
         </div>
         <ul class="footer-links">
             <li><a href="#">Tentang Kami</a></li>
             <li><a href="#">Kebijakan Privasi</a></li>
             <li><a href="#">Syarat & Ketentuan</a></li>
         </ul>
-        <p>&copy; 2024 Supa Store. All rights reserved.</p>
+        <p>&copy; 2024 WALZSHOP. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
