--- a/game.html
+++ b/game.html
@@ -13,8 +13,8 @@
     <div class="main-container">
         <header class="header">
             <a href="index.html" class="logo-link">
-                <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="Supa Store Logo" class="logo">
-                <h1 class="website-name">Supa Store</h1>
+                <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="WALZSHOP Logo" class="logo">
+                <h1 class="website-name">WALZSHOP</h1>
             </a>
             <div class="header-right">
                 <a href="#" class="header-link">
@@ -44,8 +44,14 @@
                         Untuk mengetahui User ID Anda, silakan klik menu profil di dalam game Anda.
                     </p>
                     <div class="input-group-grid">
-                        <input type="text" id="user-id" name="user_id" placeholder="Masukkan User ID" required>
-                        <input type="text" id="server-id" name="server_id" placeholder="Masukkan Zone ID (jika ada)">
+                        <div class="input-group">
+                            <i class="fas fa-id-card input-icon"></i>
+                            <input type="text" id="user-id" name="user_id" placeholder="Masukkan User ID" required>
+                        </div>
+                        <div class="input-group">
+                            <i class="fas fa-server input-icon"></i>
+                            <input type="text" id="server-id" name="server_id" placeholder="Masukkan Zone ID (jika ada)">
+                        </div>
                     </div>
                 </section>
     
@@ -76,7 +82,10 @@
                         Masukkan kode voucher yang Anda miliki untuk mendapatkan diskon.
                     </p>
                     <div class="voucher-input-group">
-                        <input type="text" id="promo-code" name="promo_code" placeholder="masukkan kode voucher" class="voucher-input">
+                        <div class="input-group" style="margin: 0;">
+                            <i class="fas fa-tag input-icon"></i>
+                            <input type="text" id="promo-code" name="promo_code" placeholder="masukkan kode voucher" class="voucher-input">
+                        </div>
                         <button type="button" id="use-voucher-btn" class="voucher-button">Gunakan</button>
                     </div>
                 </section>
@@ -90,6 +99,7 @@
                         Pastikan semua data sudah benar sebelum melanjutkan ke pembayaran.
                     </p>
                     <div class="input-group">
+                        <i class="fab fa-whatsapp input-icon"></i>
                         <input type="tel" id="whatsapp-number" name="whatsapp_number" placeholder="Masukkan Nomor WhatsApp" required>
                     </div>
                 </section>
@@ -107,14 +117,14 @@
         <div class="footer-socials">
             <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://t.me/supastoreid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
         </div>
         <ul class="footer-links">
             <li><a href="#">Tentang Kami</a></li>
             <li><a href="#">Kebijakan Privasi</a></li>
             <li><a href="#">Syarat & Ketentuan</a></li>
         </ul>
-        <p>&copy; 2024 Supa Store. All rights reserved.</p>
+        <p>&copy; 2024 WALZSHOP. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
