--- a/cart.html
+++ b/cart.html
@@ -13,8 +13,8 @@
     <div class="main-container">
         <header class="header">
             <a href="index.html" class="logo-link">
-                <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="Supa Store Logo" class="logo">
-                <h1 class="website-name">Supa Store</h1>
+                <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="WALZSHOP Logo" class="logo">
+                <h1 class="website-name">WALZSHOP</h1>
             </a>
             <div class="header-right">
                 <a href="#" class="header-link">
@@ -40,14 +40,14 @@
         <div class="footer-socials">
             <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://t.me/supastoreid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
         </div>
         <ul class="footer-links">
             <li><a href="#">Tentang Kami</a></li>
             <li><a href="#">Kebijakan Privasi</a></li>
             <li><a href="#">Syarat & Ketentuan</a></li>
         </ul>
-        <p>&copy; 2024 Supa Store. All rights reserved.</p>
+        <p>&copy; 2024 WALZSHOP. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
