--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
     <div class="main-container">
         <header class="header">
             <a href="index.html" class="logo-link">
-                <img src="https://i.supaimg.com/e474586d-0649-4171-88f6-285640778c85.png" alt="WALZSHOP Logo" class="logo">
+                <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
             <div class="header-right">
@@ -31,6 +31,9 @@
             <div class="cart-summary-card" id="cart-summary-card">
                 </div>
             
+            <div class="qr-code-section" id="qr-code-section">
+                </div>
+
             <button id="pay-button" class="confirm-button">Bayar Sekarang</button>
             <a href="javascript:history.back()" class="back-button"><i class="fas fa-arrow-left"></i> Kembali</a>
         </main>
