--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
             <div class="cart-summary-card" id="cart-summary-card">
                 </div>
             
-            <div class="qr-code-section" id="qr-code-section">
+            <div class="payment-info-section" id="payment-info-section">
                 </div>
 
             <button id="pay-button" class="confirm-button">Bayar Sekarang</button>
