--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
             <div class="header-right">
-                <a href="#" class="header-link">
+                <a href="search.html" class="header-link">
                     <i class="fas fa-search"></i>
                 </a>
-                <a href="#" class="header-link">
+                <a href="profile.html" class="header-link">
                     <i class="fas fa-user"></i>
                 </a>
             </div>
