--- a/cart.html
+++ b/cart.html
@@ -3,39 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout & Pembayaran</title>
+    <title>Keranjang Belanja</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 
-    <div class="main-container">
+    <div class="main-container cart-page-container">
         <header class="header">
             <a href="index.html" class="logo-link">
                 <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
                 <h1 class="website-name">WALZSHOP</h1>
             </a>
             <div class="header-right">
-                <a href="#" class="header-link">
+                <a href="search.html" class="header-link">
                     <i class="fas fa-search"></i>
                 </a>
-                <a href="#" class="header-link">
+                <a href="profile.html" class="header-link">
                     <i class="fas fa-user"></i>
                 </a>
             </div>
         </header>
 
-        <main class="cart-page-container">
-            <h2 class="section-title">Konfirmasi Pesanan</h2>
-            <div class="cart-summary-card" id="cart-summary-card">
+        <main class="cart-main">
+            <div id="cart-summary-card" class="cart-summary-card">
                 </div>
             
-            <div class="payment-info-section" id="payment-info-section">
+            <div id="payment-info-section" class="payment-info-section">
                 </div>
 
-            <button id="pay-button" class="confirm-button">Bayar Sekarang</button>
-            <a href="javascript:history.back()" class="back-button"><i class="fas fa-arrow-left"></i> Kembali</a>
+            <button type="button" id="pay-button" class="confirm-button">Bayar Sekarang</button>
+            <a href="javascript:history.back()" class="back-button-top" style="margin-top: 20px;"><i class="fas fa-arrow-left"></i> Kembali</a>
+
         </main>
     </div>
     
@@ -53,6 +53,7 @@
         <p>&copy; 2024 WALZSHOP. All rights reserved.</p>
     </footer>
 
+    <div class="notification-container"></div>
     <script src="script.js"></script>
 </body>
 </html>
