--- a/cart.html
+++ b/cart.html
@@ -27,6 +27,8 @@
         </header>
 
         <main class="cart-main">
+            <a href="javascript:history.back()" class="back-button-top" style="margin-bottom: 20px;"><i class="fas fa-arrow-left"></i> Kembali</a>
+
             <div id="cart-summary-card" class="cart-summary-card">
                 </div>
             
@@ -34,7 +36,6 @@
                 </div>
 
             <button type="button" id="pay-button" class="confirm-button">Bayar Sekarang</button>
-            <a href="javascript:history.back()" class="back-button-top" style="margin-top: 20px;"><i class="fas fa-arrow-left"></i> Kembali</a>
 
         </main>
     </div>
