--- a/game.html
+++ b/game.html
@@ -131,8 +131,8 @@
 
     <script>
         window.FastComments.render({
-            tenantId: "{TENANT_ID}", // <-- Ganti dengan ID Penyewa Anda
-            domain: "{DOMAIN}", // <-- Ganti dengan Kode Domain Anda
+            tenantId: "{7X-VyEtH6tt}", // <-- Ganti dengan ID Penyewa Anda
+            domain: "{8392A491389F4152841A5DE101D7D6D3}", // <-- Ganti dengan Kode Domain Anda
             defaultSortBy: "NEWEST",
             showCommentsCount: true,
             pageUrl: window.location.href
