--- a/index.html
+++ b/index.html
@@ -3,50 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WALZSHOP - Top Up Games</title>
+    <title>Walzshop - Toko Top-Up Game Terpercaya</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
-    <div class="main-container">
-        <header class="header">
-            <a href="index.html" class="logo-link">
-                <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
-                <h1 class="website-name">WALZSHOP</h1>
-            </a>
-            <div class="header-right">
-                <a href="search.html" class="header-link">
-                    <i class="fas fa-search"></i>
-                </a>
-                <a href="profile.html" class="header-link">
-                    <i class="fas fa-user"></i>
-                </a>
-            </div>
-        </header>
+    <div class="notification-container"></div>
 
-        <main class="game-selection-main">
+    <header class="header">
+        <a href="index.html" class="logo">Walzshop</a>
+    </header>
+
+    <main class="container">
+        <div class="banner-container">
+            <img src="https://i.ibb.co/680pD67/walzshop-logo.png" alt="Promo Banner" class="banner-img">
+        </div>
+
+        <section class="game-selection">
             <h2 class="section-title">Pilih Game Favoritmu</h2>
-            <section class="game-list-section">
-                <div id="game-list" class="game-grid-custom">
-                    </div>
-            </section>
-        </main>
-    </div>
+            <div class="game-grid-custom" id="game-list">
+                </div>
+        </section>
+
+        <section class="about-us">
+            <h2 class="section-title">Mengapa Memilih Kami?</h2>
+            <div class="about-grid">
+                <div class="about-item">
+                    <i class="fas fa-certificate about-icon"></i>
+                    <h3>Legal dan Terpercaya</h3>
+                    <p>Kami adalah distributor resmi, memastikan transaksi Anda 100% aman dan legal.</p>
+                </div>
+                <div class="about-item">
+                    <i class="fas fa-fast-forward about-icon"></i>
+                    <h3>Proses Kilat</h3>
+                    <p>Pesanan Anda diproses dengan cepat, hanya dalam hitungan detik setelah pembayaran.</p>
+                </div>
+                <div class="about-item">
+                    <i class="fas fa-headset about-icon"></i>
+                    <h3>Dukungan 24/7</h3>
+                    <p>Layanan pelanggan kami siap membantu Anda kapan saja, 24/7.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer class="footer">
-        <div class="footer-socials">
-            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
+        <p>&copy; 2024 Walzshop. Semua hak dilindungi.</p>
+        <div class="footer-links">
+            <a href="#">Kebijakan Privasi</a>
+            <a href="#">Syarat & Ketentuan</a>
         </div>
-        <ul class="footer-links">
-            <li><a href="#">Tentang Kami</a></li>
-            <li><a href="#">Kebijakan Privasi</a></li>
-            <li><a href="#">Syarat & Ketentuan</a></li>
-        </ul>
-        <p>&copy; 2024 WALZSHOP. All rights reserved.</p>
+        <div class="social-links">
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            <a href="#" aria-label="Discord"><i class="fab fa-discord"></i></a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
