--- a/index.html
+++ b/index.html
@@ -3,77 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walzshop - Toko Top-Up Game Terpercaya</title>
+    <title>Walzshop - Top Up Murah, Aman, dan Cepat</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <div class="notification-container"></div>
-
     <header class="header">
-        <a href="index.html" class="logo">Walzshop</a>
+        <div class="container">
+            <div class="logo">
+                <a href="index.html">Walzshop</a>
+            </div>
+            <nav class="nav">
+                <a href="index.html">Beranda</a>
+                <a href="#about">Tentang</a>
+                <a href="https://wa.me/6282298902274" target="_blank">Kontak</a>
+            </nav>
+        </div>
     </header>
 
-    <main class="container">
-        <div class="banner-container">
-            <img src="https://i.ibb.co/680pD67/walzshop-logo.png" alt="Promo Banner" class="banner-img">
-        </div>
-
-        <section class="game-selection">
-            <h2 class="section-title">Pilih Game Favoritmu</h2>
-            <div class="game-grid-custom" id="game-list">
+    <main class="main">
+        <section class="hero">
+            <div class="container">
+                <h1>Top Up Game Termurah dan Terpercaya</h1>
+                <p>Proses cepat dan otomatis. Dapatkan diamond, coin, dan voucher game favoritmu dengan harga terbaik!</p>
+                <div class="cta-buttons">
+                    <a href="#games" class="btn btn-primary">Pesan Sekarang</a>
                 </div>
+            </div>
         </section>
 
-        <section class="about-us">
-            <h2 class="section-title">Mengapa Memilih Kami?</h2>
-            <div class="about-grid">
-                <div class="about-item">
-                    <i class="fas fa-certificate about-icon"></i>
-                    <h3>Legal dan Terpercaya</h3>
-                    <p>Kami adalah distributor resmi, memastikan transaksi Anda 100% aman dan legal.</p>
-                </div>
-                <div class="about-item">
-                    <i class="fas fa-fast-forward about-icon"></i>
-                    <h3>Proses Kilat</h3>
-                    <p>Pesanan Anda diproses dengan cepat, hanya dalam hitungan detik setelah pembayaran.</p>
-                </div>
-                <div class="about-item">
-                    <i class="fas fa-headset about-icon"></i>
-                    <h3>Dukungan 24/7</h3>
-                    <p>Layanan pelanggan kami siap membantu Anda kapan saja, 24/7.</p>
+        <section id="games" class="section">
+            <div class="container">
+                <h2 class="section-title">Pilih Game Favoritmu</h2>
+                <div class="game-grid-custom" id="game-list">
+                    </div>
+            </div>
+        </section>
+
+        <section id="about" class="section about-section">
+            <div class="container">
+                <h2 class="section-title">Kenapa Pilih Walzshop?</h2>
+                <div class="about-grid">
+                    <div class="about-item">
+                        <i class="fas fa-bolt icon-large"></i>
+                        <h3>Proses Instan</h3>
+                        <p>Pesanan diproses secara otomatis dalam hitungan detik setelah pembayaran terverifikasi.</p>
+                    </div>
+                    <div class="about-item">
+                        <i class="fas fa-shield-alt icon-large"></i>
+                        <h3>100% Aman</h3>
+                        <p>Kami menjamin keamanan akun Anda. Top up langsung ke akun game resmi.</p>
+                    </div>
+                    <div class="about-item">
+                        <i class="fas fa-tags icon-large"></i>
+                        <h3>Harga Termurah</h3>
+                        <p>Dapatkan harga spesial dengan diskon dan promo menarik setiap hari.</p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-section about">
-                <h3>Tentang Walzshop</h3>
-                <p>Tempat top-up game favoritmu dengan harga termurah dan proses tercepat. Dijamin aman dan terpercaya!</p>
+        <div class="container">
+            <p>&copy; 2025 Walzshop. All rights reserved.</p>
+            <div class="social-links">
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
             </div>
-            <div class="footer-section links">
-                <h3>Tautan Cepat</h3>
-                <ul>
-                    <li><a href="#">Beranda</a></li>
-                    <li><a href="#">Tentang Kami</a></li>
-                    <li><a href="#">Hubungi Kami</a></li>
-                    <li><a href="#">Kebijakan Privasi</a></li>
-                </ul>
-            </div>
-            <div class="footer-section social">
-                <h3>Ikuti Kami</h3>
-                <div class="social-links">
-                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                    <a href="#" aria-label="Discord"><i class="fab fa-discord"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Walzshop. Semua hak dilindungi.</p>
         </div>
     </footer>
 
