--- a/index.html
+++ b/index.html
@@ -1,82 +1,88 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walzshop - Top Up Murah, Aman, dan Cepat</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Walzshop - Top Up Murah, Aman, dan Cepat</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <a href="index.html">Walzshop</a>
-            </div>
-            <nav class="nav">
-                <a href="index.html">Beranda</a>
-                <a href="#about">Tentang</a>
-                <a href="https://wa.me/6282298902274" target="_blank">Kontak</a>
-            </nav>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="container">
+      <div class="logo">
+        <a href="index.html">Walzshop</a>
+      </div>
+      <nav class="nav">
+        <a href="index.html">Beranda</a>
+        <a href="#about">Tentang</a>
+        <a href="https://wa.me/6282298902274" target="_blank">Kontak</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- MAIN -->
+  <main class="main">
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="container">
+        <h1>Top Up Game Termurah dan Terpercaya</h1>
+        <p>Proses cepat dan otomatis. Dapatkan diamond, coin, dan voucher game favoritmu dengan harga terbaik!</p>
+        <div class="cta-buttons">
+          <a href="#games" class="btn btn-primary">Pesan Sekarang</a>
         </div>
-    </header>
+      </div>
+    </section>
 
-    <main class="main">
-        <section class="hero">
-            <div class="container">
-                <h1>Top Up Game Termurah dan Terpercaya</h1>
-                <p>Proses cepat dan otomatis. Dapatkan diamond, coin, dan voucher game favoritmu dengan harga terbaik!</p>
-                <div class="cta-buttons">
-                    <a href="#games" class="btn btn-primary">Pesan Sekarang</a>
-                </div>
-            </div>
-        </section>
+    <!-- Games Section -->
+    <section id="games" class="section">
+      <div class="container">
+        <h2 class="section-title">Pilih Game Favoritmu</h2>
+        <div class="game-grid-custom" id="game-list"></div>
+      </div>
+    </section>
 
-        <section id="games" class="section">
-            <div class="container">
-                <h2 class="section-title">Pilih Game Favoritmu</h2>
-                <div class="game-grid-custom" id="game-list">
-                    </div>
-            </div>
-        </section>
-
-        <section id="about" class="section about-section">
-            <div class="container">
-                <h2 class="section-title">Kenapa Pilih Walzshop?</h2>
-                <div class="about-grid">
-                    <div class="about-item">
-                        <i class="fas fa-bolt icon-large"></i>
-                        <h3>Proses Instan</h3>
-                        <p>Pesanan diproses secara otomatis dalam hitungan detik setelah pembayaran terverifikasi.</p>
-                    </div>
-                    <div class="about-item">
-                        <i class="fas fa-shield-alt icon-large"></i>
-                        <h3>100% Aman</h3>
-                        <p>Kami menjamin keamanan akun Anda. Top up langsung ke akun game resmi.</p>
-                    </div>
-                    <div class="about-item">
-                        <i class="fas fa-tags icon-large"></i>
-                        <h3>Harga Termurah</h3>
-                        <p>Dapatkan harga spesial dengan diskon dan promo menarik setiap hari.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Walzshop. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            </div>
+    <!-- About Section -->
+    <section id="about" class="section about-section">
+      <div class="container">
+        <h2 class="section-title">Kenapa Pilih Walzshop?</h2>
+        <div class="about-grid">
+          <div class="about-item">
+            <i class="fas fa-bolt icon-large"></i>
+            <h3>Proses Instan</h3>
+            <p>Pesanan diproses secara otomatis dalam hitungan detik setelah pembayaran terverifikasi.</p>
+          </div>
+          <div class="about-item">
+            <i class="fas fa-shield-alt icon-large"></i>
+            <h3>100% Aman</h3>
+            <p>Kami menjamin keamanan akun Anda. Top up langsung ke akun game resmi.</p>
+          </div>
+          <div class="about-item">
+            <i class="fas fa-tags icon-large"></i>
+            <h3>Harga Termurah</h3>
+            <p>Dapatkan harga spesial dengan diskon dan promo menarik setiap hari.</p>
+          </div>
         </div>
-    </footer>
+      </div>
+    </section>
+  </main>
 
-    <script src="script.js"></script>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 Walzshop. All rights reserved.</p>
+      <div class="social-links">
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Script -->
+  <script src="script.js"></script>
 </body>
 </html>
