--- a/index.html
+++ b/index.html
@@ -3,78 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walzshop - Top Up Murah, Aman, dan Cepat</title>
+    <title>WALZSHOP - Top Up Games</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="logo">
-                <a href="index.html">Walzshop</a>
-            </div>
-            <nav class="nav">
-                <a href="index.html">Beranda</a>
-                <a href="#about">Tentang</a>
-                <a href="https://wa.me/6282298902274" target="_blank">Kontak</a>
-            </nav>
-        </div>
-    </header>
 
-    <main class="main">
-        <section class="hero">
-            <div class="container">
-                <h1>Top Up Game Termurah dan Terpercaya</h1>
-                <p>Proses cepat dan otomatis. Dapatkan diamond, coin, dan voucher game favoritmu dengan harga terbaik!</p>
-                <div class="cta-buttons">
-                    <a href="#games" class="btn btn-primary">Pesan Sekarang</a>
-                </div>
+    <div class="main-container">
+        <header class="header">
+            <a href="index.html" class="logo-link">
+                <img src="https://files.catbox.moe/hrtpys.jpg" alt="WALZSHOP Icon" class="logo-icon">
+                <h1 class="website-name">WALZSHOP</h1>
+            </a>
+            <div class="header-right">
+                <a href="search.html" class="header-link">
+                    <i class="fas fa-search"></i>
+                </a>
+                <a href="profile.html" class="header-link">
+                    <i class="fas fa-user"></i>
+                </a>
             </div>
-        </section>
+        </header>
 
-        <section id="games" class="section">
-            <div class="container">
-                <h2 class="section-title">Pilih Game Favoritmu</h2>
-                <div class="game-grid-custom" id="game-list">
+        <main class="game-selection-main">
+            <h2 class="section-title">Pilih Game Favoritmu</h2>
+            <section class="game-list-section">
+                <div id="game-list" class="game-grid-custom">
                     </div>
-            </div>
-        </section>
-
-        <section id="about" class="section about-section">
-            <div class="container">
-                <h2 class="section-title">Kenapa Pilih Walzshop?</h2>
-                <div class="about-grid">
-                    <div class="about-item">
-                        <i class="fas fa-bolt icon-large"></i>
-                        <h3>Proses Instan</h3>
-                        <p>Pesanan diproses secara otomatis dalam hitungan detik setelah pembayaran terverifikasi.</p>
-                    </div>
-                    <div class="about-item">
-                        <i class="fas fa-shield-alt icon-large"></i>
-                        <h3>100% Aman</h3>
-                        <p>Kami menjamin keamanan akun Anda. Top up langsung ke akun game resmi.</p>
-                    </div>
-                    <div class="about-item">
-                        <i class="fas fa-tags icon-large"></i>
-                        <h3>Harga Termurah</h3>
-                        <p>Dapatkan harga spesial dengan diskon dan promo menarik setiap hari.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
 
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Walzshop. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            </div>
+        <div class="footer-socials">
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/walzshopid" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
         </div>
+        <ul class="footer-links">
+            <li><a href="#">Tentang Kami</a></li>
+            <li><a href="#">Kebijakan Privasi</a></li>
+            <li><a href="#">Syarat & Ketentuan</a></li>
+        </ul>
+        <p>&copy; 2024 WALZSHOP. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
