--- a/game.html
+++ b/game.html
@@ -35,7 +35,7 @@
             <form id="topup-form" onsubmit="return false;">
                 <section class="section-card">
                     <div class="section-header">
-                        <div class="section-number">✏</div>
+                        <div class="section-number">📍</div>
                         <h3>Lengkapi Data Akun</h3>
                     </div>
                     <div class="input-group">
@@ -48,7 +48,7 @@
 
                 <section class="section-card">
                     <div class="section-header">
-                        <div class="section-number">🛍</div>
+                        <div class="section-number">🛒</div>
                         <h3>Pilih Nominal Top Up</h3>
                     </div>
                     <div id="product-list" class="options-grid">
@@ -77,7 +77,7 @@
 
                 <section class="section-card">
                     <div class="section-header">
-                        <div class="section-number">5🏷</div>
+                        <div class="section-number">🏷</div>
                         <h3>Gunakan Kode Voucher</h3>
                     </div>
                     <div class="input-group voucher-input-group">
