--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
     <main class="main-content">
         <section class="banner-section">
-            <img src="https://i.supaimg.com/f04a60f9-cf63-455b-b9f2-2b5a1936314f.webp" alt="Banner Promo" class="banner-image">
+            <div class="slider-container">
+                <div class="slider" id="banner-slider">
+                    <img src="https://files.catbox.moe/hrtpys.jpg" alt="Banner Promo 1" class="banner-image active">
+                    <img src="https://files.catbox.moe/8g41jj.jpg" alt="Banner Promo 2" class="banner-image">
+                    <img src="https://files.catbox.moe/e87yj3.png" alt="Banner Promo 3" class="banner-image">
+                </div>
+            </div>
         </section>
 
         <section class="game-list-section">
